# mycalc

./: CMakeLists.txt  README.md  doxyfile
lib/: CMakeLists.txt  ShuntingYard.cpp  ShuntingYard.h
source/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  hello_test.cpp
